--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My To-Do List</title>
     <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <div class = "container">
         <h1>My To-Do List</h1>
+            <button id="dark-mode-toggle"><i class="fas fa-moon"></i></button>
         <div class="input-container">
             <input type="text" id="todo-input" placeholder = "Enter a task..."/>
             <input type="date" id="due-date-input"/>
