--- a/index.html
+++ b/index.html
@@ -1,24 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/assets/favicon2.svg" />
     <title>AryanToDO</title>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SGRBKBQQLN"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-SGRBKBQQLN');
+    </script>
 </head>
+
 <body>
-    <div class = "container">
+    <div class="container">
         <h1>My To-Do List</h1>
-            <button id="dark-mode-toggle"><i class="fas fa-moon"></i></button>
+        <button id="dark-mode-toggle"><i class="fas fa-moon"></i></button>
         <div class="input-container">
-            <input type="text" id="todo-input" placeholder = "Enter a task..."/>
-            <input type="date" id="due-date-input"/>
-            <button id ="add-task-btn">Add Task</button>
+            <input type="text" id="todo-input" placeholder="Enter a task..." />
+            <input type="date" id="due-date-input" />
+            <button id="add-task-btn">Add Task</button>
         </div>
         <ul id="todo-list"></ul>
     </div>
-    <script src = "script.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
